# Taro

./: CLAUDE.md  README.md  example_usage.py  main.py  pyproject.toml  test.py
archive/: test_run_deer_flow.py  test_run_deer_flow_full.py
src/: runner.py
src/agents/: agent.py  prompt.py  toolkits.py
src/core/: lark_sync.py  rag.py
src/utlis/: config.py  invoke_lark.py  lark_utils.py  logger_config.py
taro/src/core/: db_client.py  lark_sync.py
tests/: test_agent.py  test_client.py  test_invoke_deer_flow.py  test_lark_sync.py  test_run_deerflow_tool.py  test_runner.py  test_toolkit.py
