[project]
name = "taro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3.25",
    "langgraph>=0.4.8",
    "pytest>=8.4.0",
    "lark-oapi @ git+https://github.com/RiviaAzusa/oapi-sdk-python.git@v2_main",
    "aiosqlite>=0.21.0",
    "pytest-asyncio>=1.0.0",
    "httpx[socks]>=0.28.1",
    "easylark",
    "python-socks>=2.7.1",
]

[tool.uv.sources]
easylark = { git = "https://github.com/RiviaAzusa/EasyLark.git" }
