[project]
name = "taro"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=0.3",
    "langchain-community>=0.3",
    "langchain-openai>=0.3",
    "langchain-text-splitters>=0.3",
    "langgraph>=0.4",
    "pytest>=8.4.0",
    "aiosqlite>=0.21.0",
    "pytest-asyncio>=1.0.0",
    "httpx[socks]>=0.28.1",
    "python-socks>=2.7.1",
    "faiss-cpu>=1.7.4",
    "openai>=1.0.0",
    "tiktoken>=0.5.0",
    "dashscope",
    "loguru>=0.7.3",
    "langgraph-prebuilt>=0.2.2",
    "langchain-qwq>=0.2.0",
    "langchain-tavily>=0.2.4",
    "lark-oapi",
    "langgraph-checkpoint-sqlite>=2.0.10",
    "langchain-deepseek>=0.1.3",
    "easylark",
]

[tool.uv.sources]
lark-oapi = { git = "https://github.com/RiviaAzusa/oapi-sdk-python.git", rev = "v2_main" }
easylark = { git = "https://github.com/RiviaAzusa/EasyLark.git" }
